--- a/_posts/2014-07-12-project-7.markdown
+++ b/_posts/2014-07-12-project-7.markdown
@@ -1,11 +1,11 @@
 ---
 layout: default
-modal-id: 5
-date: 2014-07-14
+modal-id: 7
+date: 2014-07-12
 img: submarine.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Use this area of the page to describe your project
+description: Use this area of the page to describe your project.
 ---
